@@ -1,0 +1,29 @@
+/*
+ *  OS dependent APIs for Linux
+ *
+ *  Copyright (C) 2018 Thomas d'Otreppe <tdotreppe@aircrack-ng.org>
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+#ifndef OSDEP_CHANNELS_H
+#define OSDEP_CHANNELS_H
+
+#define CHANNEL_NO_HT 0
+#define CHANNEL_HT20 20
+#define CHANNEL_HT40_PLUS 39
+#define CHANNEL_HT40_MINUS 41
+
+#endif // OSDEP_CHANNELS_H
